--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.2",
+    "react-dom": "^6.0.2",
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
